# r-jellycli

./: .dockerignore  .gitignore  .roomodes  .windsurfrules  Cargo.toml  Dockerfile  README.md  compose.yml  credentials.json.example  jellyfin-openapi-stable.json  jellyfin_token.json.example
.cargo/: config.toml
.clinerules/: directory-structure  memory  rules  rules.mdc
.clinerules/rules/: error-documentation.mdc  lessons-learned.mdc
docs/: active_context.md  api_test.sh  architecture.md  error-documentation.md  lessons-learned.md  manual_api_test_procedure.md  product_requirement_docs.md  tasks_plan.md  technical.md
src/: lib.rs  main.rs  player.rs
src/audio/: alsa_handler.rs  alsa_writer.rs  decoder.rs  error.rs  format_converter.rs  loop_runner.rs  mod.rs  playback.rs  processor.rs  progress.rs  sample_converter.rs  state_manager.rs  stream_wrapper.rs  tests.rs
src/config/: mod.rs  settings.rs  tests.rs
src/jellyfin/: api.rs  auth.rs  mod.rs  models.rs  models_playback.rs  reporter.rs  session.rs  tests.rs  websocket.rs  ws_incoming_handler.rs
src/player/: audio_task_manager.rs  command_handler.rs  item_fetcher.rs  mod.rs  playback_starter.rs  run_loop.rs  state.rs
src/ui/: cli.rs  mod.rs  tests.rs
tests/: README.md  integration_tests.rs  jellyfin_api_integration.rs  test_utils.rs
tests/integration/: audio_test.rs  config_test.rs  jellyfin_api_sequence_test.rs  jellyfin_client_test.rs  mod.rs
tests/manual/: api_test.rs  auth_test.rs  direct_auth_test.rs  jellyfin_auth.rs  session_test.rs  test_connection.rs
