[package]
name = "jellyfin-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
alsa = "0.6.0"
serde_json = "1.0"